--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="/src/assets/favicon.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Renting home</title>
   </head>
   <body>
     <div id="root"></div>
